<?xml version="1.0"?>
<package format="3">
  <name>rover_bringup</name>
  <version>0.0.1</version>
  <description>Bringup launch files for Wave Rover robot</description>

  <maintainer email="you@example.com">ubuntu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
